Added termination resistor

--- a/OBD2/CM7/TouchGFX/simulator/msvs/Application.vcxproj
+++ b/OBD2/CM7/TouchGFX/simulator/msvs/Application.vcxproj
@@ -24,6 +24,9 @@
     <ClCompile Include="..\..\gui\src\screen1_screen\Screen1View.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\screen1_screen\Screen1ViewBase.cpp"/>
     <ClCompile Include="..\..\generated\simulator\src\video\SoftwareMJPEGDecoder.cpp"/>
+    <ClCompile Include="..\..\gui\src\plot_screen\plotPresenter.cpp"/>
+    <ClCompile Include="..\..\gui\src\plot_screen\plotView.cpp"/>
+    <ClCompile Include="..\..\generated\gui_generated\src\plot_screen\plotViewBase.cpp"/>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(ApplicationRoot)\assets\texts\texts.xml"/>
@@ -177,6 +180,9 @@
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\screen1_screen\Screen1ViewBase.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\common\SimConstants.hpp"/>
     <ClInclude Include="..\..\generated\simulator\include\simulator\video\SoftwareMJPEGDecoder.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\plot_screen\plotPresenter.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\plot_screen\plotView.hpp"/>
+    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\plot_screen\plotViewBase.hpp"/>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="$(ApplicationRoot)\generated\simulator\touchgfx.rc"/>
