--- a/.github/workflows/cpp_check.yml
+++ b/.github/workflows/cpp_check.yml
@@ -23,23 +23,23 @@ jobs:
 
     - name: Verify files exist
       run: |
-        ls -R CM7/Core/Src
-        ls -R CM7/TouchGFX/gui/src
+        ls -R OBD2/CM7/Core/Src
+        ls -R OBD2/CM7/TouchGFX/gui/src
 
     - name: Run cppcheck
       run: |
         cppcheck --enable=all --inconclusive --std=c11 \
-        CM7/Core/Src/main.c \
-        CM7/Core/Src/freertos.c \
-        CM7/TouchGFX/gui/src \
+        OBD2/CM7/Core/Src/main.c \
+        OBD2/CM7/Core/Src/freertos.c \
+        OBD2/CM7/TouchGFX/gui/src \
         --xml --xml-version=2 2> cppcheck-report.xml
 
     - name: Generate simple text report
       run: |
         cppcheck --enable=all --inconclusive --std=c11 \
-        CM7/Core/Src/main.c \
-        CM7/Core/Src/freertos.c \
-        CM7/TouchGFX/gui/src > report.txt
+        OBD2/CM7/Core/Src/main.c \
+        OBD2/CM7/Core/Src/freertos.c \
+        OBD2/CM7/TouchGFX/gui/src > report.txt
 
     - name: Create report folder
       run: mkdir -p report
