--- a/.github/workflows/cpp_check.yml
+++ b/.github/workflows/cpp_check.yml
@@ -19,8 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y cppcheck wkhtmltopdf python3 python3-pip
-        pip3 install cppcheck-htmlreport
+        sudo apt install -y cppcheck enscript ghostscript
 
     - name: Verify files exist
       run: |
@@ -29,24 +28,17 @@ jobs:
         echo "Checking TouchGFX/gui/src files:"
         ls -R OBD2/CM7/TouchGFX/gui/src
 
-    - name: Run cppcheck and generate XML report
-      run: |
-        cppcheck --enable=all --inconclusive --std=c11 \
-          OBD2/CM7/Core/Src/*.c \
-          OBD2/CM7/TouchGFX/gui/src/*.cpp \
-          --xml --xml-version=2 2> cppcheck-report.xml
-
-    - name: Generate HTML report from XML
-      run: |
-        cppcheck-htmlreport --file=cppcheck-report.xml \
-          --report-dir=report-html \
-          --source-dir=OBD2 \
-          --title="STM32 Code Analysis Report"
-
-    - name: Convert HTML report to PDF
+    - name: Run cppcheck and generate text report
       run: |
         mkdir -p report
-        wkhtmltopdf report-html/index.html report/cppcheck-report.pdf
+        # Redirect stderr and stdout to report.txt so all warnings/errors are captured
+        cppcheck --enable=all --inconclusive --std=c11 \
+          OBD2/CM7/Core/Src/*.c \
+          OBD2/CM7/TouchGFX/gui/src/*.cpp 2>&1 | tee report/report.txt
+
+    - name: Convert text report to PDF
+      run: |
+        enscript report/report.txt -o - | ps2pdf - report/cppcheck-report.pdf
 
     - name: Upload PDF Artifact
       uses: actions/upload-artifact@v4
