--- a/.github/workflows/cpp_check.yml
+++ b/.github/workflows/cpp_check.yml
@@ -1,4 +1,4 @@
-name: STM32 Cppcheck PDF Report
+name: STM32 Cppcheck User-Friendly PDF Report
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y cppcheck enscript ghostscript
+        sudo apt install -y cppcheck wkhtmltopdf python3 wget
 
     - name: Verify files exist
       run: |
@@ -28,17 +28,31 @@ jobs:
         echo "Checking TouchGFX/gui/src files:"
         ls -R OBD2/CM7/TouchGFX/gui/src
 
-    - name: Run cppcheck and generate text report
+    - name: Run cppcheck and generate XML report
       run: |
-        mkdir -p report
-        # Redirect stderr and stdout to report.txt so all warnings/errors are captured
         cppcheck --enable=all --inconclusive --std=c11 \
           OBD2/CM7/Core/Src/*.c \
-          OBD2/CM7/TouchGFX/gui/src/*.cpp 2>&1 | tee report/report.txt
+          OBD2/CM7/TouchGFX/gui/src/*.cpp \
+          --xml --xml-version=2 2> cppcheck-report.xml
 
-    - name: Convert text report to PDF
+    - name: Download cppcheck-htmlreport script
       run: |
-        enscript report/report.txt -o - | ps2pdf - report/cppcheck-report.pdf
+        wget https://raw.githubusercontent.com/danmar/cppcheck/master/cppcheck-htmlreport.py -O cppcheck-htmlreport.py
+        chmod +x cppcheck-htmlreport.py
+
+    - name: Generate HTML report from XML
+      run: |
+        mkdir -p report-html
+        python3 cppcheck-htmlreport.py \
+          --file=cppcheck-report.xml \
+          --report-dir=report-html \
+          --source-dir=OBD2 \
+          --title="STM32 Code Analysis Report"
+
+    - name: Convert HTML report to PDF
+      run: |
+        mkdir -p report
+        wkhtmltopdf report-html/index.html report/cppcheck-report.pdf
 
     - name: Upload PDF Artifact
       uses: actions/upload-artifact@v4
